--- a/thesis-fr.tex
+++ b/thesis-fr.tex
@@ -15,71 +15,49 @@
 
 \subsection*{Titre~:}
 \begin{center}
-\large Vérification et Simulation des Comportements pour la Sûreté \\
+\large  \\
   de Fonctionnement des Systèmes Autonomes Critiques
 \end{center}
 
+
+% With the maturation and growing power of interactive proof systems, the body of formalized mathematics and engineering is dramatically increasing. The Isabelle Archive 
+% of Formal Proof (AFP) [6], created in 2004, counted in 2015 a total of 215 articles, whereas the count stood at 413 only three years later. An in- depth empirical 
+% analysis shows that both complexity and size increased accord- ingly [11]. Together with the AFP, there is also a growing body on articles concerned with formal 
+% software engineering issues such as standardized lan- guage definitions (e. g., [15, 21]), data-structures (e. g., [14, 24]), hardware-models (e.g., [20]), 
+% security-related specifications (e.g., [13,26]), or operating systems (e.g., [22,27]).
+% ⃝c Springer Nature Switzerland AG 2019
+% P. C. Ölveczky and G. Salaün (Eds.): SEFM 2019, LNCS 11724, pp. 275–292, 2019. https://doi.org/10.1007/978-3-030-30446-1_15
+% 276 A. D. Brucker and B. Wolff
+% This development raises interest in at least two ways: First, there is a sub- stantial potential of retrieve and reuse of formal developments, and second, formal 
+% techniques allow a deeper checking of documents containing formal spec- ifications, proofs and tests. This paves the way for collaborative, continuously 
+% machine-checked developments of certification documents involving both formal as well of informal content evolution.
+
 \subsection*{Sujet~:}
-Les systèmes autonomes ont la particularité d'être soumis,
-en plus des défaillances physiques classiques,
-à des erreurs relevant d'interactions avec l'environnement
-ou du traitement des données
-(par exemple, l'éblouissement ou une mauvaise reconnaissance de forme).
+Avec la maturation et la puissance croissante des systèmes de preuve interactifs, le corps des mathématiques et de l'ingénierie formelles s'est augmente 
+de manière considérable. Un example pour cette tendence sont les 
+archives d'Isabelle \cite{} de la preuve formelle (AFP) [6]: Créés en 2004, ils comptaient en 2015 215 articles au total, contre 413 seulement trois ans plus tard. 
+%Une analyse empirique approfondie montre que la complexité et la taille ont augmenté en conséquence [11]. 
+En collaboration avec l'AFP, il existe également un nombre croissant d'articles sur les questions formelles d'ingénierie logicielle telles que les définitions de langue normalisées (par exemple, [15, 21]), les structures de données ([14, 24]), des processeurs (par exemple, [20]), les spécifications liées à la sécurité ([13,26]) ou des systèmes d'exploitation (par exemple, [22,27]). Des systemes comme MMT\cite{XXX}, Openmath\cite{XXX} et Logipedia \cite{XXX} representent autres examples
+pour cette tendance.
 
-Dans de tels environnements hostiles et difficiles à modéliser,
-on s'intéresse à des \emph{modèles de comportement}
-dans lesquels le système est censé assurer des propriétés de sécurité
-malgré la présence de données erronées ou imprécises.
-La norme ISO SOTIF \cite{iso-2019-sotif} introduit
-une classification de scénarios en plusieurs catégories,
-\emph{known safe}, \emph{known unsafe}, \emph{unknown safe}
-et \emph{unknown unsafe}, selon que le scénario est connu
-lors de la conception du système ou bien découvert lors de la phase de test
-et selon que le scénario ne déstabilise pas le système
-ou bien provoque sa défaillance.
+Le projet europeen \emph(Logipedia}\cite{XXX}, a base d'un language de preuve formelle Dedukti\cite{XXX}, vise a definir une lingua franca pour échanger des termes,
+preuves et theories de ces differentes bibliotheques et de prevoir des mechanismes de fouille avancés dans ces bibliothèques combineés. 
 
-L'objectif de cette thèse est de trouver des modèles comportementaux
-qui sont suffisamment flexibles et \emph{open world} pour prendre en compte
-des scénarios \emph{known unsafe} et \emph{unknown unsafe}.
+For both --- combination of "mathematical content" generated from different proof systems as well as advanced, pdomain-specific search technologies ---
+the construction of a flexible mechanism to specify and manage meta-data is fundamental importance. Since the precise structure of meta-data will evolve over time, a \emph{language} and a \emph{framework to enforce} the validity of meta-data is required. For such languages, the term 
+\emph{ontology} has been established in semantic web communities, and there are plethora of approaches and languages ranging from 
+validations of \verb*dtd*'s over XML documents to languages such as OWL \cite{}. 
 
-Une théorie de référence pour étudier les modèles comportementaux est
-\emph{Concurrent Sequential Processes} (CSP)
-qui a été introduite dans un livre en 1978
-par Tony Hoare \cite{Hoare:1985:CSP:3921},
-et qui a évolué de manière substantielle
-entre-temps \cite{BrookesHR84,brookes-roscoe85,roscoe:csp:1998}.
-CSP décrit le non-déterminisme, la communication
-et la synchronisation avec un ensemble minimal d'opérateurs
-et un ensemble des règles.
-CSP offre à la fois un cadre d'étude théorique,
-un langage de modélisation de comportement,
-et un framework de vérification et simulation
-via une implémentation des processus par des automates.
-Les processus CSP sont ainsi décrits dans un modèle abstrait
-avec une grande \emph{expressivité} et conçu pour être \emph{compositionnels}.
+However, enforcing a structure in a general document is different from stucture in mathematical libraries consisting of formal proofs.
+is done by annotations with meta-information; the language in which the latter is defined is widely called a document ontology (an equivalent term is vocabulary) in the semantic web community [3], i.e., a machine-readable form of the structure of a document and the document dis- course. Let us consider a set of text elements available in a given corpus. These elements may be sentences or paragraphs, figures, tables, definitions or lemmas, code, and, for example, the results of test-executions.
 
-Isabelle/HOL-CSP \cite{HOL-CSP-AFP} est une théorie générale de CSP
-implémentée dans l'environnement de modélisation et de preuve
-Isabelle/HOL \cite{nipkow.ea:isabelle:2002}.
-Isabelle/HOL-CSP permet entre autres d'exprimer :
-%
-\begin{itemize}
-  \item
-    des non-déterminismes non-bornés
-    (ce qui correspond aux scénarios \emph{known unsafe}) ;
-  \item
-    une hiérarchisation des événements \emph{open-world}
-    (ce qui correspond aux scénarios \emph{unknown unsafe}) ;
-  \item
-    des patrons de processus (ce qui correspond au \emph{known unsafe})\ldots
-\end{itemize}
-%
-dans un cadre permettant modélisation, simulation et preuve.
-En particulier, il permet de prouver de manière incrémentale des propriétés
-sur des environnements avec une grande variabilité
-et de vérifier la correction des processus par raffinement.
+MORE TO COME
+... 
 
 \subsection*{Objectifs~:}
+
+TODO
+
 \begin{itemize}
   \item
     Étude des modèles \emph{open world} d'environnements liés
