--- a/thesis-fr.tex
+++ b/thesis-fr.tex
@@ -8,7 +8,7 @@
 \begin{document}
 
 \title{\textbf{Proposition de Thèse Paris-Saclay/LRI}}
-\author{Safouan Taha et Burkhart Wolff}
+\author{Idir Ait Sadoune et Burkhart Wolff}
 \date{}
 
 \maketitle
@@ -16,7 +16,7 @@
 \subsection*{Titre~:}
 \begin{center}
 \large  \\
-  de Fonctionnement des Systèmes Autonomes Critiques
+  An Ontology Framework for Formal Mathematical Libraries 
 \end{center}
 
 
