--- a/thesis-fr.tex
+++ b/thesis-fr.tex
@@ -58,7 +58,7 @@ like "which theorems here are relevant for sampling analogous signals" or "which
 specifying the amount of 'blur' in a digital image" ?
 
 MORE TO COME: Isabelle/DOF is a first language of this type. 
-... 
+... see SEFM Paper. 
 
 \subsection*{Objectifs~:}
 
@@ -70,7 +70,7 @@ TODO
 \item
   Developping onto libraries for proof exchanges
 \item
-  Developing onto libraries for domain-specific search use
+  Developing onto libraries for domain-specific Ontologies in Math and Engineerinfg
 \item
   Developping a framework of semantic links of ontologies via proofs.
 \end{itemize}
