Rename source file and fix compilation issue

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper,10pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{url,french}
+\usepackage{url}
 
 \sloppy
 
@@ -15,8 +15,7 @@
 
 \subsection*{Titre~:}
 \begin{center}
-\large  \\
-  An Ontology Framework for Formal Mathematical Libraries 
+\large An Ontology Framework for Formal Mathematical Libraries
 \end{center}
 
 
@@ -40,7 +39,7 @@ archives d'Isabelle \cite{} de la preuve formelle (AFP) [6]: Créés en 2004, il
 En collaboration avec l'AFP, il existe également un nombre croissant d'articles sur les questions formelles d'ingénierie logicielle telles que les définitions de langue normalisées (par exemple, [15, 21]), les structures de données ([14, 24]), des processeurs (par exemple, [20]), les spécifications liées à la sécurité ([13,26]) ou des systèmes d'exploitation (par exemple, [22,27]). Des systemes comme MMT\cite{XXX}, Openmath\cite{XXX} et Logipedia \cite{XXX} representent autres examples
 pour cette tendance.
 
-Le projet europeen \emph(Logipedia}\cite{XXX}, a base d'un language de preuve formelle Dedukti\cite{XXX}, vise a definir une lingua franca pour échanger des termes,
+Le projet europeen \emph{Logipedia}\cite{XXX}, a base d'un language de preuve formelle Dedukti\cite{XXX}, vise a definir une lingua franca pour échanger des termes,
 preuves et theories de ces differentes bibliotheques et de prevoir des mechanismes de fouille avancés dans ces bibliothèques combineés. 
 
 For both --- the combination of "mathematical content" generated from different proof systems as well as advanced, domain-specific 
