New Submission Status

--- a/biblio.bib
+++ b/biblio.bib
@@ -206,3 +206,70 @@ url="https://doi.org/10.1007/978-3-642-28891-3_35"
   type = {techreport},
   url = {https://www.iso.org/standard/70939.html},
 }
+
+@InProceedings{Brucker-ea.Using-CICM18,
+author="Brucker, Achim D.
+and Ait-Sadoune, Idir
+and Crisafulli, Paolo
+and Wolff, Burkhart",
+editor="Rabe, Florian
+and Farmer, William M.
+and Passmore, Grant O.
+and Youssef, Abdou",
+title="Using the Isabelle Ontology Framework",
+booktitle="Intelligent Computer Mathematics",
+year="2018",
+publisher="Springer International Publishing",
+address="Cham",
+pages="23--38",
+abstract="While Isabelle is mostly known as part of Isabelle/HOL (an interactive theorem prover), it actually provides a framework for developing a wide spectrum of applications. A particular strength of the Isabelle framework is the combination of text editing, formal verification, and code generation.",
+isbn="978-3-319-96812-4"
+}
+
+
+@InProceedings{BruckerWolff.Design-SEFM19,
+author="Brucker, Achim D.
+and Wolff, Burkhart",
+editor="{\"O}lveczky, Peter Csaba
+and Sala{\"u}n, Gwen",
+title="Isabelle/DOF: Design and Implementation",
+booktitle="Software Engineering and Formal Methods",
+year="2019",
+publisher="Springer International Publishing",
+address="Cham",
+pages="275--292",
+abstract="DOF is a novel framework for defining ontologies and enforcing them during document development and document evolution. A major goal of DOF is the integrated development of formal certification documents (e. g., for Common Criteria or CENELEC 50128) that require consistency across both formal and informal arguments.",
+isbn="978-3-030-30446-1"
+}
+
+@InProceedings{BruckerWolff.Certif-IFM19,
+author="Brucker, Achim D.
+and Wolff, Burkhart",
+editor="Ahrendt, Wolfgang
+and Tapia Tarifa, Silvia Lizeth",
+title="Using Ontologies in Formal Developments Targeting Certification",
+booktitle="Integrated Formal Methods",
+year="2019",
+publisher="Springer International Publishing",
+address="Cham",
+pages="65--82",
+abstract="A common problem in the certification of highly safety or security critical systems is the consistency of the certification documentation in general and, in particular, the linking between semi-formal and formal content of the certification documentation.",
+isbn="978-3-030-34968-4"
+}
+
+
+@inproceedings{DBLP:conf/medi/Ait-SadouneM19,
+  author    = {Idir A{\"{\i}}t{-}Sadoune and
+               Linda Mohand{-}Oussa{\"{\i}}d},
+  title     = {Building Formal Semantic Domain Model: An Event-B Based Approach},
+  booktitle = {Model and Data Engineering - 9th International Conference, {MEDI}
+               2019, Toulouse, France, October 28-31, 2019, Proceedings},
+  pages     = {140--155},
+  year      = {2019},
+  url       = {https://doi.org/10.1007/978-3-030-32065-2\_10},
+  doi       = {10.1007/978-3-030-32065-2\_10},
+  timestamp = {Tue, 22 Oct 2019 15:54:10 +0200},
+  biburl    = {https://dblp.org/rec/conf/medi/Ait-SadouneM19.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
