--- a/local.bib
+++ b/local.bib
@@ -44,12 +44,33 @@
   year		= 2019
 }
 
+@Misc{		  mmt,
+  title		= {MMT - Masters of Mathematics for Teachers: Home},
+  note		= {\url{https://subjectguides.uwaterloo.ca/MMT}},
+  year		= 2019
+}
+
+@Misc{		  dedukti,
+  title		        = {The Dedukti Framework and Library},
+  note		= {\url{https://deducteam.github.io}},
+  year		= 2019
+}
+
 @Misc{		  TheMizarJournal,
   title		= {The Mizar Journal Home Page},
   author	= {A. Trybulec and P. Rudnicki and R. Matuszewski},
   note		= {\url{https://mizar.org}},
   year		= 2019
 }
+
+@Misc{		  openmath,
+  title		= {The OpenMath Homepage},
+  author	= {M.Kohlhase and F.Rabe et al.},
+  note		= {\url{https://www.openmath.org}},
+  year		= 2018
+}
+
+
 
 @InProceedings{	  DBLP:conf/mkm/BlanchetteHMN15,
   author	= {Jasmin Christian Blanchette and Maximilian P. L. Haslbeck
@@ -210,6 +231,12 @@
   author	= {Makarius Wenzel},
   year		= 2017,
   note		= {Part of the Isabelle distribution.}
+}
+
+@MISC{owl2012,
+   title = {OWL 2 Web Ontology Language},
+   note={\url{https://www.w3.org/TR/owl2-overview/}, Document Overview (Second Edition)},
+   author = {World Wide Web Consortium}
 }
 
 @Misc{		  protege,
