--- a/thesis.tex
+++ b/thesis.tex
@@ -16,7 +16,7 @@
 \subsection*{Titre~:}
 \begin{center}
 \large An Ontology Framework for Formal Libraries \\
-          Conception et Implémentation d'une Language d'Ontologie pour des Librairies Formelles
+          Conception et Implémentation d'un Environment d'Ontologie pour des Librairies Formelles
 \end{center}
 
 
